# himalaya-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  default.nix  deny.toml  package.nix
.github/workflows/: release-on-demand.yml  releases.yml
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs
src/email/: address.rs  envelope.rs  flag.rs  mailbox.rs  mod.rs
src/imap/: backend.rs  client.rs  mod.rs
src/jmap/: backend.rs  client.rs  mod.rs
src/m2dir/: backend.rs  client.rs  mod.rs
src/maildir/: backend.rs  client.rs  mod.rs
src/shared/: client.rs  mod.rs
src/smtp/: backend.rs  client.rs  mod.rs
src/tui/: app.rs  mod.rs  model.rs  update.rs  view.rs
src/tui/theme/: default.rs  dracula_dark.rs  mod.rs  one_light.rs  resolved.rs
src/ui/: compose.rs  envelopes.rs  layout.rs  mailboxes.rs  message.rs  mod.rs
src/wizard/: autoconfig.rs  discover.rs  mod.rs  pacc.rs  srv.rs
